<resources>
    <string name="app_name">CanAirIO</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_scan">Scan…</string>
    <string name="menu_unpair">Unpair…</string>
    <string name="menu_donation">Make a donation…</string>
    <string name="menu_guide">Sensor DIY Guide</string>
    <string name="menu_share">Share…</string>
    <string name="menu_support_us">Support Us</string>
    <string name="stop_scan">Stopping Scanning…</string>
    <string name="start_scan">Start Scanning…</string>
    <string name="msg_ble_not_supported">Bluetooth Low Energy not Supported!</string>
    <string name="label_pm25">PM2.5</string>
    <string name="msg_device_disconnected">Device disconnected</string>
    <string name="msg_device_reconnecting">Device disconnected, reconnecting…</string>
    <string name="msg_devices_empty_list">Not devices found!</string>
    <string name="ble_device_name_legacy">ESP32_HPMA115S0</string>
    <string name="ble_device_name">CanAirIO_ESP32</string>
    <string name="ble_device_name_short">CanAirIO</string>
    <string name="ble_device_address">RSSI: -67 [AB:CD:03:AE:E8:62</string>
    <string name="bt_device_scanning">Scanning…</string>
    <string name="bt_device_scan">Scan</string>
    <string name="msg_device_connecting">Connecting…</string>
    <string name="msg_record_stop">Saving track…</string>
    <string name="msg_record">Start recording…</string>
    <string name="bt_map">Map</string>
    <string name="msg_records_empty_list">No records for now</string>
    <string name="msg_not_public_records">Loading public reports…</string>
    <string name="msg_record_stop_alert">Please stop the current recording track</string>
    <string name="title_stime">Sample time interval</string>
    <string name="summary_stime">5 seconds</string>
    <string name="summary_wifi">Send WiFi settings</string>
    <string name="msg_save_config">Saving device setting…</string>
    <string name="msg_save_config_ifx">Saving InfluxDB setting…</string>
    <string name="msg_save_config_api">Saving CanAirio API setting…</string>
    <string name="msg_save_config_wfi">Saving WiFi setting…</string>
    <string name="msg_config_saved">Device settings updated!</string>
    <string name="msg_stime_error">Sync stime value…</string>
    <string name="msg_save_location">Saving location…</string>
    <string name="msg_save_location_failed">Location is no ready…</string>
    <string name="key_setting_apiusr">key_setting_apiusr</string>
    <string name="key_setting_apipss">key_setting_apipss</string>
    <string name="key_setting_apisrv">key_setting_apisrv</string>
    <string name="key_setting_apiuri">key_setting_apiuri</string>
    <string name="key_setting_stime">key_setting_stime</string>
    <string name="key_setting_wmac">key_setting_wmac</string>
    <string name="key_setting_sdpath">key_setting_sdpath</string>
    <string name="key_setting_pass">key_setting_pass</string>
    <string name="key_setting_ssid">key_setting_ssid</string>
    <string name="key_setting_ifxdb">key_setting_ifxdb</string>
    <string name="key_setting_ifxip">key_setting_ifxip</string>
    <string name="key_setting_ifxtg">key_setting_ifxtg</string>
    <string name="key_setting_ifxpt">key_setting_ifxpt</string>
    <string name="key_setting_ifx_advanced">key_setting_ifx_advanced</string>
    <string name="key_setting_enable_wifi">key_setting_wifi_enable</string>
    <string name="key_setting_enable_api">key_setting_api_enable</string>
    <string name="key_setting_enable_ifx">key_setting_ifx_enable</string>
    <string name="key_setting_enable_clear">key_setting_enable_clear</string>
    <string name="key_setting_enable_reboot">key_setting_reboot_enable</string>
    <string name="key_setting_enable_location">key_setting_location</string>
    <string name="key_setting_force_i2c_sensors">key_setting_force_i2c_sensors</string>
    <string name="key_setting_temp_offset">key_setting_temp_offset</string>
    <string name="key_setting_debug_enable">key_setting_debug_enable</string>
    <string name="value_apisrv_default">api.canair.io</string>
    <string name="value_apiuri_default">points/save/</string>
    <string name="msg_ssid_pass_error">Please fill SSID and Password</string>
    <string name="summary_wifi_enable">Disable WiFi Connection</string>
    <string name="summary_wifi_disable">Send WiFi settings</string>
    <string name="summary_reboot">Send reboot command to device</string>
    <string name="summary_force_i2c_sensors">Only detect I2C sensors</string>
    <string name="summary_temp_offset">Temperature compensation</string>
    <string name="summary_debug_enable">More logs on serial output</string>
    <string name="summary_clear">Set settings to default</string>
    <string name="title_force_i2c_sensors">Force only I2C sensors</string>
    <string name="title_temp_offset">Temperature offset</string>
    <string name="title_debug_enable">Enable debug mode</string>
    <string name="bt_device_build">build your own device</string>
    <string name="url_oficial_guide_en">https://canair.io/docs</string>
    <string name="url_oficial_guide_es">https://canair.io/docs</string>
    <string name="url_github_android_app_issues">https://github.com/kike-canaries/canairio_android/issues</string>
    <string name="url_canairio_support_us">https://canair.io/contributions.html</string>
    <string name="url_canairio_page">https://canair.io</string>
    <string name="url_canairio_feedback">https://canair.io/#three</string>
    <string name="msg_chart_loading">Loading data, please wait…</string>
    <string name="msg_loading">loading…</string>
    <string name="msg_chart_no_data">No data.</string>
    <string name="msg_chart_points">Points</string>
    <string name="msg_chart_track">Track</string>
    <string name="msg_chart_metadata">Metadata</string>
    <string name="bt_device_clear">Please restart the app after this</string>
    <string name="bt_device_clear_action">CLEAR</string>
    <string name="msg_device_clear">Cleaning CanAirio device…</string>
    <string name="bt_device_reboot">Please restart the app after this</string>
    <string name="bt_device_reboot_action">REBOOT</string>
    <string name="msg_device_reboot">CanAirio device rebooting…</string>
    <string name="msg_set_current_location">Set current location into the device?</string>
    <string name="bt_location_save_action">set</string>
    <string name="crashkey_device_wmac">crashkey_device_wmac</string>
    <string name="crashkey_device_name">crashkey_device_name</string>
    <string name="crashkey_api_usr">crashkey_api_usr</string>
    <string name="menu_feedback">Feedback</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="msg_sync_complete">Device sync complete</string>
    <string name="msg_passw_seted">*********</string>
    <string name="msg_passw_unseted" />
    <string name="key_setting_dtype">key_setting_dtype</string>
    <string name="msg_reboot_manually">Please manually reboot of CanAirIO device!</string>
    <string name="key_device_status">key_device_status</string>
    <string name="key_device_info">key_device_info</string>
    <string name="key_setting_vars">key_settings_vars</string>
    <string name="title_device_status">Bluetooth status:</string>
    <string name="url_chart_get_data_share" translatable="false">https://mobile.canair.io/?trackId=</string>
    <string name="url_chart_get_data" translatable="false">http://api.canair.io:8080/tracks/</string>
    <string name="msg_chart_sharing">Sharing data to public tab..</string>
    <string name="bt_dialog_cancel">Cancel</string>
    <string name="bt_dialog_agree">I agree</string>
    <string name="msg_gps_title">Use your location</string>
    <string name="msg_gps_desc">CanAirIO app collects location and your air quality device data in a background process. With this, the app is able to make the air quality maps and routes. These routes don\'t have any personal information, only the location. This data will only be shared to our cloud with your manual action via "share button". For this reason we need to request these permissions. </string>
    <string name="msg_ble_title">Use your Bluetooth</string>
    <string name="msg_ble_desc">CanAirIO app needs access to Bluetooth device to scan your air quality device, also all apps that need Bluetooth require location permissions. For this reason we need to request this permission.</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="url_canairio_privacy">https://canair.io/privacy.html</string>
    <string name="key_appversion">key_appversion</string>
    <string name="key_setting_null">" "</string>
    <string name="summary_settings_vars">What variable is shown in each chart</string>
    <string name="title_settings_vars">Variables filter</string>
    <string name="summary_device_status">Disconnected</string>
    <string name="title_device_settings">CanAirIO Device Settings</string>
    <string name="summary_mobile_preferences">Bluetooth mobile station settings</string>
    <string name="title_mobile_preferences">Mobile station</string>
    <string name="summary_fixed_preferences">WiFi fixed station settings</string>
    <string name="title_fixed_preferences">Fixed station</string>
    <string name="title_device_info">Device info:</string>
    <string name="summary_feedback_button">Report issues or suggest new features</string>
    <string name="title_feedback_button">Send feedback</string>
    <string name="title_appversion">About</string>
    <string name="key_ifxdb_default">canairio</string>
    <string name="title_setting_ifxdb">Database Name</string>
    <string name="key_ifxip_default">influxdb.canair.io</string>
    <string name="title_setting_ifxip">Hostname</string>
    <string name="key_ifxpt_default">8086</string>
    <string name="title_setting_ifxpt">Port</string>
    <string name="title_key_enable_location">Tag fixed location Geohash</string>
    <string name="title_key_dname">Fixed station tag name</string>
    <string name="title_key_ssid">WiFi name (SSID)</string>
    <string name="title_key_enable_ifx">Enable publication</string>
    <string name="summary_key_enable_ifx_ready">Publish to CanAirIO or custom server</string>
    <string name="category_ifx_share_title">Share CanAirIO Fixed Station</string>
    <string name="category_ifx_share_summary">Optional for fixed stations (WiFi mode)</string>
    <string name="category_wifi_title">WiFi Preferences</string>
    <string name="category_wifi_summary">For remote updates or fixed stations</string>
    <string name="bt_share_dialog">share</string>
    <string name="bt_dialog_export">Only export :(</string>
    <string name="title_share_dialog">Thanks for Sharing!</string>
    <string name="canairio_share_dialog">CanAirIO Share Dialog</string>
    <string name="msg_share_dialog_desc">"The current track will be shared to the CanAirIO Mobile Map. Thanks for you contribution!"</string>
    <string name="hint_share_dialog_meta">Additional metadata that you want tag to this track</string>
    <string name="content_description_welcome" translatable="false">CanAirIO</string>
    <string name="about_licence_l2" translatable="false">(rfc 3261) GNU GPL License V3</string>
    <string name="about_title_colaboration">Contributors:</string>
    <string name="about_content_contributors" translatable="false">\Hackbo.org @offraylc Mutabit.com @jcomas @roberbike @Nelpin @arhuaco @brolin @cedancp @Marvin-YYC @eljuguetero @epatarroyo @fjospinas @gaguevaras @hpsaturn @ikks @juandavideth @juanpa097 @melkati @roberbike @sebastian-code @trecetp</string>
    <string name="about_title_donors">Donors:</string>
    <string name="about_content_donors" translatable="false">\@arhuaco @baerchiathomei @cedancp @davegriffiths @hpsaturn @ikks @josedavid @Karisma @kleper @roberbike</string>
    <string name="bt_device_connect">Connect</string>
</resources>