<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        app:defaultValue="false"
        app:icon="@android:drawable/ic_lock_power_off"
        app:key="@string/key_device_status"
        app:summary="Disconnected"
        app:title="@string/title_device_status" />

    <PreferenceCategory app:title="InfluxDB Settings">

        <EditTextPreference
            android:inputType="text"
            app:defaultValue="@string/key_ifxdb_default"
            app:icon="@android:drawable/ic_menu_upload"
            app:key="@string/key_setting_ifxdb"
            app:summary="@string/key_ifxdb_default"
            app:title="@string/title_setting_ifxdb" />

        <EditTextPreference
            android:inputType="textUri"
            app:defaultValue="@string/key_ifxip_default"
            app:key="@string/key_setting_ifxip"
            app:summary="@string/key_ifxip_default"
            app:title="@string/title_setting_ifxip" />

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="@string/key_ifxpt_default"
            app:key="@string/key_setting_ifxpt"
            app:summary="@string/key_ifxpt_default"
            app:title="@string/title_setting_ifxpt" />

    </PreferenceCategory>

</PreferenceScreen>