<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@android:drawable/ic_lock_power_off"
            app:key="@string/key_device_status"
            app:summary="Disconnected"
            app:title="@string/msg_ble_status_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="@string/key_device_status"
        app:title="CanAirIO Device Settings">

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="5"
            app:icon="@android:drawable/ic_menu_save"
            app:key="@string/key_setting_stime"
            app:summary="@string/summary_stime"
            app:title="Sample Time Interval" />

        <EditTextPreference
            android:inputType="number"
            app:defaultValue="0"
            app:key="@string/key_setting_temp_offset"
            app:summary="@string/summary_temp_offset"
            app:title="@string/title_temp_offset" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_dtype_entries"
            android:entryValues="@array/pref_dtype_values"
            android:key="@string/key_setting_dtype"
            android:title="Sensor type"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/key_setting_force_i2c_sensors"
            app:summary="@string/summary_force_i2c_sensors"
            app:title="Force only I2C sensors" />

        <EditTextPreference
            android:inputType="textUri"
            app:defaultValue="/sdcard/canairio"
            app:enabled="false"
            app:key="@string/key_setting_sdpath"
            app:summary="/sdcard/canairio"
            app:title="Auto Save Directory" />

    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="@string/key_device_status"
        app:title="Some Device Tools">


        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/key_setting_enable_reboot"
            app:summary="@string/summary_reboot"
            app:title="Reboot Device" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/key_setting_enable_clear"
            app:summary="@string/summary_clear"
            app:title="Factory Reset" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/key_setting_debug_enable"
            app:summary="@string/summary_debug_enable"
            app:title="@string/title_debug_enable" />

    </PreferenceCategory>

</PreferenceScreen>