<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@android:drawable/ic_lock_power_off"
            app:key="@string/key_device_status"
            app:summary="Disconnected"
            app:title="@string/title_device_status" />
    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="@string/key_device_status"
        app:icon="@android:drawable/ic_menu_manage"
        android:summary="@string/category_wifi_summary"
        app:title="@string/category_wifi_title">

        <EditTextPreference
            android:inputType="text"
            app:key="@string/key_setting_ssid"
            app:summary=""
            app:title="@string/key_ssid_title" />

        <EditTextPreference
            android:inputType="textPassword"
            app:key="@string/key_setting_pass"
            app:summary="WiFi password"
            app:title="Password" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/key_setting_enable_wifi"
            app:summary="@string/summary_wifi"
            app:title="Enable WiFi Connection" />

    </PreferenceCategory>

    <PreferenceCategory
        app:dependency="@string/key_setting_enable_wifi"
        app:icon="@android:drawable/ic_menu_edit"
        android:summary="@string/category_ifx_share_summary"
        app:title="@string/category_ifx_share_title">

        <SwitchPreference
            app:key="@string/key_setting_enable_location"
            app:summary="@string/msg_loading"
            app:title="@string/key_enable_location_title" />

        <EditTextPreference
            android:inputType="text"
            app:key="@string/key_setting_dname"
            app:title="@string/key_dname_title" />

        <Preference
            android:fragment="hpsaturn.pollutionreporter.view.SettingsCustomInfluxDB"
            app:key="@string/key_setting_ifx_advanced"
            app:summary="Custom InfluxDB settings"
            app:title="Advanced Settings" />

        <SwitchPreference
            app:key="@string/key_setting_enable_ifx"
            app:summary="@string/key_enable_ifx_summary_ready"
            app:title="@string/key_enable_ifx_title" />

    </PreferenceCategory>


    <PreferenceCategory>
        <Preference
            app:key="@string/key_setting_null"
            app:summary=""
            app:title="" />
    </PreferenceCategory>
</PreferenceScreen>