<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hpsaturn.pollutionreporter.MainActivity">

    <item
        android:id="@+id/action_unpair"
        android:orderInCategory="200"
        android:title="@string/menu_unpair"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_guide"
        android:orderInCategory="100"
        android:title="@string/menu_guide"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="50"
        android:title="@string/menu_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_donation"
        android:orderInCategory="100"
        android:title="@string/menu_donation"
        app:showAsAction="never" />

</menu>
