<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_share_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/title_share_dialog"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_share_dialog_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_share_dialog_title"
        android:lineSpacingExtra="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:text="@string/msg_share_dialog_desc"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/et_share_dialog_meta"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/tv_share_dialog_desc"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_share_dialog_meta"
        android:text=""
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/img_share_dialog"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_below="@+id/et_share_dialog_meta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/canairio_share_dialog"
        android:src="@drawable/ic_logo_share" />

    <Button
        android:id="@+id/bt_share_dialog_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_share_dialog"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:text="@string/bt_dialog_export" />


    <Button
        android:id="@+id/bt_share_dialog_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_red"
        android:layout_below="@id/bt_share_dialog_export"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/bt_share_dialog" />


</RelativeLayout>