<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="App settings">

        <MultiSelectListPreference
            android:defaultValue="@array/pref_vars_stores"
            android:entries="@array/pref_vars_entries"
            android:entryValues="@array/pref_vars_values"
            android:icon="@android:drawable/ic_menu_gallery"
            android:key="@string/key_setting_vars"
            android:summary="What variable is shown in each chart"
            android:title="Variables filter"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory>
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@android:drawable/ic_lock_power_off"
            app:key="@string/key_device_status"
            app:summary="Disconnected"
            app:title="@string/msg_ble_status_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:dependency="@string/key_device_status"
        app:title="CanAirIO Device Settings">

        <Preference
            android:dependency="@string/key_device_status"
            android:fragment="hpsaturn.pollutionreporter.view.SettingsMobileStation"
            app:summary="Bluetooth mobile station settings"
            android:icon="@android:drawable/ic_menu_directions"
            app:title="Mobile Station"></Preference>

        <Preference
            android:dependency="@string/key_device_status"
            android:fragment="hpsaturn.pollutionreporter.view.SettingsFixedStation"
            app:summary="WiFi fixed station settings"
            android:icon="@android:drawable/ic_menu_mapmode"
            app:title="Fixed Station"></Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="@string/key_device_status"
        app:title="">
        <Preference
            app:icon="@android:drawable/ic_menu_info_details"
            app:key="@string/key_device_info"
            app:summary=""
            app:title="Device info:" />
    </PreferenceCategory>

    <PreferenceCategory app:title="">
        <Preference
            app:icon="@android:drawable/ic_menu_send"
            app:key="@string/key_send_feedback"
            app:summary="Report issues or suggest new features"
            app:title="Send Feedback" />
    </PreferenceCategory>

</PreferenceScreen>