<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="fill_parent"
    android:layout_height="72dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:background="@color/colorPrimaryDark"
    card_view:cardBackgroundColor="@color/colorPrimaryDark"
    android:padding="2dp"
    card_view:cardCornerRadius="6dp">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="8dp" />

        <ImageView
            android:id="@+id/iv_device_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_bluetooth" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_toEndOf="@+id/iv_device_icon"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:text="@string/ble_device_name_legacy"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_device_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_device_name"
            android:layout_below="@+id/tv_device_name"
            android:layout_marginTop="2dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lines="1"
            android:text="@string/ble_device_address"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_device_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/bt_device_connect" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>

